# excalidraw-desktop

./: .gitattributes  .gitignore  README.md  index.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
dist-frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
